# revet

./: .gitignore  docker-compose.yml  env.template  pyproject.toml
ai/: checkpointer.py  constants.py  llm.py  prompts.py  retriever.py  rules.py  schemas.py  tools.py  vectorstore.py
ai/graphs/: auto_pr.py  chat.py  issue_analysis.py  pr_review.py
ai/indexing/: chunker.py  languages.py  pipeline.py
app/: api.py  chat.py  config.py  main.py  observability.py  redis_client.py
app/auth/: dependencies.py  sessions.py
app/db/: models.py  session.py
app/github/: auth.py  constants.py  files.py  git.py  issues.py  oauth.py  pulls.py  webhooks.py
app/workers/: celery_app.py  tasks.py
context/: ai-workflow-rules.md  architecture.md  code-standards.md  prd.md  progress-tracker.md  project-overview.md
evals/: README.md  datasets.py  judges.py  run_eval.py  targets.py
