[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revet"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database / ORM
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary,asyncio]>=3.2",  # LangGraph AsyncPostgresSaver
    # Config
    "pydantic-settings>=2.0",
    # AI
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langsmith>=0.1",
    "openai>=1.0",
    # Background jobs
    "celery[redis]>=5.3",
    # GitHub integration
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    # Code chunking (Phase 2)
    "tree-sitter>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "flower>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "ai", "evals"]
