[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revet"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database / ORM
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary,asyncio]>=3.2",  # LangGraph AsyncPostgresSaver
    # Config
    "pydantic-settings>=2.0",
    # AI
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langsmith>=0.1",
    "openai>=1.0",
    # Background jobs
    "celery[redis]>=5.3",
    # GitHub integration
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    # Code chunking (Phase 2): standard py-tree-sitter + one grammar per language
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-c-sharp>=0.23.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "flower>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "ai", "evals"]
